Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17216

Assertion `!dt->fraction_remainder(decimals())' failed in Field_temporal_with_date::store_TIME_with_warning

    XMLWordPrintable

Details

    Description

      set sql_mode='';
       
      CREATE TABLE t1 (i1 date );
      CREATE TABLE t2 (i2 int unsigned );
      INSERT INTO t2 VALUES (0);
      insert into t1 select * from t2;
      

        10.4 4437b5bffbfcb71c7e39
      Thread 1 (Thread 0x7fcc327b6700 (LWP 8754)):
      #0  __pthread_kill (threadid=<optimized out>, signo=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:62
      #1  0x00005645c8243d18 in my_write_core (sig=6) at /10.4/mysys/stacktrace.c:481
      #2  0x00005645c7a9d147 in handle_fatal_signal (sig=6) at /10.4/sql/signal_handler.cc:305
      #3  <signal handler called>
      #4  0x00007fcc3e306428 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
      #5  0x00007fcc3e30802a in __GI_abort () at abort.c:89
      #6  0x00007fcc3e2febd7 in __assert_fail_base (fmt=<optimized out>, assertion=assertion@entry=0x5645c846a038 "!dt->fraction_remainder(decimals())", file=file@entry=0x5645c84699e8 "/10.4/sql/field.cc", line=line@entry=5561, function=function@entry=0x5645c846cea0 <Field_temporal_with_date::store_TIME_with_warning(Datetime const*, ErrConv const*, int)::__PRETTY_FUNCTION__> "int Field_temporal_with_date::store_TIME_with_warning(const Datetime*, const ErrConv*, int)") at assert.c:92
      #7  0x00007fcc3e2fec82 in __GI___assert_fail (assertion=0x5645c846a038 "!dt->fraction_remainder(decimals())", file=0x5645c84699e8 "/10.4/sql/field.cc", line=5561, function=0x5645c846cea0 <Field_temporal_with_date::store_TIME_with_warning(Datetime const*, ErrConv const*, int)::__PRETTY_FUNCTION__> "int Field_temporal_with_date::store_TIME_with_warning(const Datetime*, const ErrConv*, int)") at assert.c:101
      #8  0x00005645c7a7689a in Field_temporal_with_date::store_TIME_with_warning (this=0x7fcbe4135788, dt=0x7fcc327b42a0, str=0x7fcc327b42d0, was_cut=0) at /10.4/sql/field.cc:5561
      #9  0x00005645c7a76c59 in Field_temporal_with_date::store (this=0x7fcbe4135788, nr=0, unsigned_val=true) at /10.4/sql/field.cc:5592
      #10 0x00005645c7a8c99c in Field_num::save_in_field (this=0x7fcbe412e3a8, to=0x7fcbe4135788) at /10.4/sql/field.h:1763
      #11 0x00005645c7a8b7e6 in Field::store_field (this=0x7fcbe4135788, from=0x7fcbe412e3a8) at /10.4/sql/field.h:767
      #12 0x00005645c7a95139 in field_conv_incompatible (to=0x7fcbe4135788, from=0x7fcbe412e3a8) at /10.4/sql/field_conv.cc:836
      #13 0x00005645c7a95195 in field_conv (to=0x7fcbe4135788, from=0x7fcbe412e3a8) at /10.4/sql/field_conv.cc:849
      #14 0x00005645c7ac80fe in save_field_in_field (from=0x7fcbe412e3a8, null_value=0x7fcbe4017076, to=0x7fcbe4135788, no_conversions=false) at /10.4/sql/item.cc:6445
      #15 0x00005645c7ac8340 in Item_field::save_in_field (this=0x7fcbe4017000, to=0x7fcbe4135788, no_conversions=false) at /10.4/sql/item.cc:6496
      #16 0x00005645c7723116 in fill_record (thd=0x7fcbe4000b00, table=0x7fcbe40abc60, ptr=0x7fcbe4135780, values=..., ignore_errors=true, use_value=false) at /10.4/sql/sql_base.cc:8490
      #17 0x00005645c772332d in fill_record_n_invoke_before_triggers (thd=0x7fcbe4000b00, table=0x7fcbe40abc60, ptr=0x7fcbe4135778, values=..., ignore_errors=true, event=TRG_EVENT_INSERT) at /10.4/sql/sql_base.cc:8543
      #18 0x00005645c776e046 in select_insert::store_values (this=0x7fcbe40169e0, values=...) at /10.4/sql/sql_insert.cc:3889
      #19 0x00005645c776dccd in select_insert::send_data (this=0x7fcbe40169e0, values=...) at /10.4/sql/sql_insert.cc:3820
      #20 0x00005645c781fe46 in end_send (join=0x7fcbe4016a90, join_tab=0x0, end_of_records=false) at /10.4/sql/sql_select.cc:20448
      #21 0x00005645c781c1ae in do_select (join=0x7fcbe4016a90, procedure=0x0) at /10.4/sql/sql_select.cc:18765
      #22 0x00005645c77f5629 in JOIN::exec_inner (this=0x7fcbe4016a90) at /10.4/sql/sql_select.cc:4089
      #23 0x00005645c77f4a9c in JOIN::exec (this=0x7fcbe4016a90) at /10.4/sql/sql_select.cc:3883
      #24 0x00005645c77f5d22 in mysql_select (thd=0x7fcbe4000b00, tables=0x7fcbe4015b58, wild_num=1, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=3489925888, result=0x7fcbe40169e0, unit=0x7fcbe40049b0, select_lex=0x7fcbe40155d0) at /10.4/sql/sql_select.cc:4288
      #25 0x00005645c77e768c in handle_select (thd=0x7fcbe4000b00, lex=0x7fcbe40048e8, result=0x7fcbe40169e0, setup_tables_done_option=1073741824) at /10.4/sql/sql_select.cc:382
      #26 0x00005645c77ab80f in mysql_execute_command (thd=0x7fcbe4000b00) at /10.4/sql/sql_parse.cc:4837
      #27 0x00005645c77b5e85 in mysql_parse (thd=0x7fcbe4000b00, rawbuf=0x7fcbe4014e98 "insert into t1 select * from t2", length=31, parser_state=0x7fcc327b5470, is_com_multi=false, is_next_command=false) at /10.4/sql/sql_parse.cc:8085
      #28 0x00005645c77a2f50 in dispatch_command (command=COM_QUERY, thd=0x7fcbe4000b00, packet=0x7fcbe41791d1 "insert into t1 select * from t2", packet_length=31, is_com_multi=false, is_next_command=false) at /10.4/sql/sql_parse.cc:1850
      #29 0x00005645c77a196d in do_command (thd=0x7fcbe4000b00) at /10.4/sql/sql_parse.cc:1395
      #30 0x00005645c790867f in do_handle_one_connection (connect=0x5645c9ff6bf0) at /10.4/sql/sql_connect.cc:1402
      #31 0x00005645c79083d0 in handle_one_connection (arg=0x5645c9ff6bf0) at /10.4/sql/sql_connect.cc:1308
      #32 0x00005645c81d422a in pfs_spawn_thread (arg=0x5645c9ffdbd0) at /10.4/storage/perfschema/pfs.cc:1862
      #33 0x00007fcc3ef436ba in start_thread (arg=0x7fcc327b6700) at pthread_create.c:333
      #34 0x00007fcc3e3d841d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
      

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: